add APIs for transactions and operation type
