# models/transaction.go
@@ -6,10 +6,10 @@ import (
 
 type Transaction struct {
 	Id              uint          `gorm:"primaryKey" json:"id,omitempty"`
-	AccountID       uint          `gorm:"not null" json:"accountID,omitempty"`
-	OperationTypeID uint          `gorm:"not null" json:"operationTypeID,omitempty"`
+	AccountID       uint          `gorm:"not null" json:"account_id,omitempty"`
+	OperationTypeID uint          `gorm:"not null" json:"operation_type_id,omitempty"`
 	Amount          float64       `gorm:"not null" json:"amount,omitempty"`
 	EventDate       time.Time     `gorm:"not null" json:"eventDate"`
-	Account         Account       `gorm:"foreignKey:AccountID" json:"account"`
-	OperationType   OperationType `gorm:"foreignKey:OperationTypeID" json:"operationType"`
+	Account         Account       `gorm:"foreignKey:AccountID"`
+	OperationType   OperationType `gorm:"foreignKey:OperationTypeID"`
 }
